--- a/Esoft_Project/Esoft_Project.csproj
+++ b/Esoft_Project/Esoft_Project.csproj
@@ -61,6 +61,9 @@
     <Compile Include="ClientsSet.cs">
       <DependentUpon>ModelTutorial.tt</DependentUpon>
     </Compile>
+    <Compile Include="DemandSet.cs">
+      <DependentUpon>ModelTutorial.tt</DependentUpon>
+    </Compile>
     <Compile Include="FormSupply.cs">
       <SubType>Form</SubType>
     </Compile>
